infra/k8s/authservice-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-postgres-depl
  labels:
    app: authservice-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: postgresql/data
            name: postgres-volume-claim
      volumes:
        - name: postgres-volume-claim
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-postgres-srv
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 5432
      targetPort: 5432
