infra/k8s/authservice-postgres-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice-postgres-srv
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 9000
      targetPort: 9000
